--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=MOAMEN-HAMDAN\\SQLEXPRESS;Database=AUTH_project;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+  },
+  "AppSettings": {
+    "JWTSecret": "GiveASecretKeyHavingAtLeast32Characters"
   }
-
-
 }
