--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,25 +1,14 @@
-﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
+{
   "profiles": {
-    "IIS Express": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "http://localhost:5297",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "launchUrl": "swagger"
-    },
     "Authentication_Authorization_api": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "http://localhost:5297",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "launchUrl": "swagger"
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5297"
     }
-  }
+  },
+  "$schema": "https://json.schemastore.org/launchsettings.json"
 }
